fixed small visual issues and ready to add an animation of fire behind menu choices.

--- a/src/components/LandingPage/landing.page.css
+++ b/src/components/LandingPage/landing.page.css
@@ -25,9 +25,10 @@
 
 #staffButton {
     background: -webkit-linear-gradient(#f30d01, #fbb920);
+    background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    font-size: 40px;
+    font-size: 20px;
     filter: drop-shadow(3px 2px 4px #fbb920);
     width: 50%;
 }
